Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	deleted:    README.Docker.md
	deleted:    README.md
	new file:   backend/.dockerignore
	new file:   backend/.gitignore
	renamed:    Dockerfile -> backend/Dockerfile
	renamed:    Dockerfile.dev -> backend/Dockerfile.dev
	new file:   backend/README.Docker.md
	new file:   backend/README.md
	modified:   backend/app.js
	renamed:    docker-compose.prod.yml -> backend/docker-compose.prod.yml
	renamed:    docker-compose.yml -> backend/docker-compose.yml
	new file:   backend/docker-start.bat
	new file:   backend/docker-start.sh
	renamed:    package-lock.json -> backend/package-lock.json
	new file:   backend/package.json
	renamed:    prisma.config.ts -> backend/prisma.config.ts
	deleted:    docker-start.bat
	deleted:    docker-start.sh
	modified:   frontend/.gitignore
	new file:   frontend/README.md
	deleted:    package.json

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Copia o schema do Prisma ANTES de instalar (necessário para o postinstall)
-COPY backend/prisma ./backend/prisma
+COPY prisma ./prisma
 
 # Instala as dependências (usa npm install pois pode não ter package-lock.json)
 # O postinstall irá gerar o Prisma Client automaticamente
@@ -21,7 +21,7 @@ RUN npm install --omit=dev
 COPY . .
 
 # Gera o Prisma Client novamente (caso o postinstall tenha falhado)
-RUN npx prisma generate --schema=./backend/prisma/schema.prisma || true
+RUN npx prisma generate --schema=./prisma/schema.prisma || true
 
 # Define variável de ambiente para produção
 ENV NODE_ENV=production
